src/objects/Project__c.object
<CustomObject>
    <customHelpPage>Planshelppage</customHelpPage>
    <description>Main Plan container</description>
    <fields>
        <fullName>CRM__c</fullName>
        <label>Performance CRM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Add your project description here (max 4000 chars)</inlineHelpText>
        <label>Description</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ERP__c</fullName>
        <label>Performance ERP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ends_date__c</fullName>
        <defaultValue>Today() + 45</defaultValue>
        <label>End date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Headline__c</fullName>
        <label>Headline</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plantype__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Plan type</label>
        <referenceTo>plantype__c</referenceTo>
        <relationshipLabel>Plans</relationshipLabel>
        <relationshipName>Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>PROD B</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Social_media__c</fullName>
        <label>Performance Social media</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Starts_date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Start date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StatusImage__c</fullName>
        <description>old
IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;+musqot__Status_Image_Id__c,TEXT(musqot__Status__c),16,16)</description>
        <formula>CASE(Status__c, &apos;Not Started&apos;, IMAGE(&apos;/resource/1433929854000/musqot__Planned&apos;,TEXT(Status__c),16,16), &apos;In Progress&apos;, IMAGE(&apos;/resource/1433930034000/musqot__Active&apos;,TEXT(Status__c),16,16),&apos;Completed&apos;,IMAGE(&apos;/resource/1433930013000/musqot__Finnished&apos;,TEXT(Status__c),16,16),&apos;Deferred&apos;,IMAGE(&apos;/resource/1433930023000/musqot__Deferred&apos;,TEXT(Status__c),16,16), IMAGE(&apos;/resource/1443021886000/musqot__StatusOther&apos;,TEXT(Status__c),16,16))</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Image_Id__c</fullName>
        <label>Status image id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <color>#3366FF</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
                <color>#FFCC33</color>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
                <color>#33CC00</color>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred</fullName>
                <color>#CC0000</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Plan</label>
    <listViews>
        <fullName>Musqot_plans</fullName>
        <columns>NAME</columns>
        <columns>Plantype__c</columns>
        <columns>Starts_date__c</columns>
        <columns>Ends_date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>StatusImage__c</columns>
        <filterScope>Mine</filterScope>
        <label>Musqot plans</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>